
Fixes...
----------------------------------------------------------------------
Thu Mar 22 01:35:31 2001                        Michael Jennings (mej)

Yay, prep works.
----------------------------------------------------------------------
Thu Mar 22 01:35:54 2001                        Michael Jennings (mej)

Update todo list.
----------------------------------------------------------------------
Mon Mar 26 00:47:16 2001                        Michael Jennings (mej)

Moved the common functions into a Perl module and began adding other
Perl modules for interoperation between tools.  Doing this right will
take some time, but it doesn't all have to be done right away.
----------------------------------------------------------------------
Tue Mar 27 04:43:21 2001                        Michael Jennings (mej)

More module work and the beginnings of source/patch merges.
----------------------------------------------------------------------
Wed Mar 28 21:00:48 2001                        Michael Jennings (mej)

You can now run "buildtool" inside a module and get packages built
from that working copy.  No interaction with server needed. :)
----------------------------------------------------------------------
Thu Mar 29 01:11:05 2001                        Michael Jennings (mej)

buildtool should now be able to build SPM's.  It should also support
in-module product files named ".prod" which can be used for in-place
building of modules with non-default semantics.
----------------------------------------------------------------------
Mon Apr  2 00:52:23 2001                        Michael Jennings (mej)

Today's work, trying to get 6.2.4 building with the new Avalon stuff.
----------------------------------------------------------------------
Tue Apr  3 19:15:09 2001                        Michael Jennings (mej)

Meant to check these in last night.  Oops again.
----------------------------------------------------------------------