@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: revtool,v 1.62 2001/04/02 07:53:39 mej Exp $
+# $Id: revtool,v 1.63 2001/04/04 09:36:56 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -169,7 +169,7 @@ talk_to_cvs_server
                 $err = AVALON_CONFLICT_FOUND;
             } elsif ($line =~ /^cvs \[\w+ aborted\]: no such tag/
                      || $line =~ /^cvs \S+: warning: new-born \S+ has disappeared$/) {
-                eprint "$opt_t is not a valid tag for $file_list\n";
+                eprint "$opt_t is not a valid tag for this file/module\n";
                 $err = AVALON_INVALID_TAG;
             } elsif ($line =~ /^cvs server: nothing known about/) {
                 $line =~ s/^cvs server: nothing known about//;
@@ -884,7 +884,7 @@ BEGIN {
     }
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.62 $ created on $Date: 2001/04/02 07:53:39 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.63 $ created on $Date: 2001/04/04 09:36:56 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
