@@ -1117,3 +1117,7 @@ Tue Apr  3 19:15:09 2001                        Michael Jennings (mej)
 
 Meant to check these in last night.  Oops again.
 ----------------------------------------------------------------------
+Wed Apr  4 02:36:05 2001                        Michael Jennings (mej)
+
+Oh look, it's a new automated update tool.  Well, most of one anyway.
+----------------------------------------------------------------------
